Unit tests added for main results controller

--- a/viseon/Viseon.Apps.MvcClient/Views/Result/Overview.cshtml
+++ b/viseon/Viseon.Apps.MvcClient/Views/Result/Overview.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Viseon.Apps.MvcClient.ViewModels.Result.ResultViewModel
 @{
-    ViewBag.Title = "Overview";
+    ViewBag.Title =$"{Model.OnPage.PageUrl} onpage viSEOn!";
 }
 <div class="row">
     <div class="col-md-12">
