--- a/viseon/Viseon.Apps.MvcClient/Views/Shared/_LayoutDashboardUi.cshtml
+++ b/viseon/Viseon.Apps.MvcClient/Views/Shared/_LayoutDashboardUi.cshtml
@@ -1,20 +1,4 @@
-﻿<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-</head>
-<body>
-    <div>
-       
-    </div>
-</body>
-</html>
-
-
-
-<!doctype html>
+﻿<!doctype html>
 <html lang="en-us">
 <head>
     <meta charset="utf-8">
@@ -32,6 +16,16 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="@Url.Content("~/Content/Themes/DashboardUi/css/main.min.css?v=1.4")">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52056929-16"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-52056929-16');
+    </script>
+
 </head>
 <body>
     <!--[if lte IE 9]>
