fixed bug with search box not showing on mobile fixed issue with tooltip not being escaped

--- a/viseon/Viseon.Apps.MvcClient/Views/Shared/_SearchForm.cshtml
+++ b/viseon/Viseon.Apps.MvcClient/Views/Shared/_SearchForm.cshtml
@@ -1,6 +1,6 @@
 ﻿
  <form action="@Url.Content("~/Result/Overview")" method="post">
-     <div class="c-field has-icon-right c-navbar__search u-hidden-down@tablet u-ml-auto u-mr-small">
+     <div class="c-field has-icon-right c-navbar__search  u-ml-auto u-mr-small">
          <button class="c-field__icon" style="border: none; background-color: transparent;">
              <i class="fa fa-search"></i>
          </button>
